# lambda-lang

./: README.md  lambda-lang.cabal
app/: Compile.hs  Repl.hs
examples/: fibonacci.txt  lazy.txt  mutualRecursion.txt
src/: Evaluate.hs  Parser.hs  Types.hs
