name:                lambda-lang
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/lambda-lang#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types, Evaluate, Parser 
  build-depends:       base >= 4.7 && < 5
                        , containers
                        , transformers
  default-language:    Haskell2010



executable repl
  hs-source-dirs:      app
  main-is:             Repl.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda-lang
                     , containers 
  default-language:    Haskell2010


executable compile
  hs-source-dirs:      app
  main-is:             Compile.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda-lang
                     , containers 
  default-language:    Haskell2010

test-suite lambda-lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambda-lang
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lambda-lang
